force-app/main/default/objects/CaseEscalation__mdt/CaseEscalation__mdt.object-meta.xml
<CustomObject>
    <label>Case Escalation</label>
    <pluralLabel>Case Escalations</pluralLabel>
</CustomObject>