force-app/main/default/objects/CaseEscalation__mdt/fields/DaysPassed__c.field-meta.xml
<CustomField>
    <fullName>DaysPassed__c</fullName>
    <label>Days Passed</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>