force-app/main/default/objects/CaseEscalation__mdt/fields/EmailTemplatetoSend__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplatetoSend__c</fullName>
    <label>Email Template to Send</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>