force-app/main/default/objects/CaseEscalation__mdt/fields/EscalationLevel__c.field-meta.xml
<CustomField>
    <fullName>EscalationLevel__c</fullName>
    <label>Escalation Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 2</fullName>
                <default>true</default>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>