force-app/main/default/objects/CaseEscalation__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>AffiliateMetadata__mdt</referenceTo>
    <relationshipLabel>Case Escalations</relationshipLabel>
    <relationshipName>Case_Escalations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>